ポインタ加速度追加

--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1,27 +1,29 @@
 <resources>
     <string name="app_name">HardKeyPointer</string>
-    <string name="accessibility_service_description">HardKeyPointer - © 2024 @nnnnnnn0090</string>
+    <string name="accessibility_service_description">ハードキーポインタ制御</string>
 
     <string name="key_settings">キー設定</string>
-    <string name="up_move_key_code">上移動キーコード</string>
-    <string name="down_move_key_code">下移動キーコード</string>
-    <string name="left_move_key_code">左移動キーコード</string>
-    <string name="right_move_key_code">右移動キーコード</string>
-    <string name="tap_key_code">タップキーコード</string>
-    <string name="move_speed">移動速度 (ms)</string>
-    <string name="scroll_up">上にスクロール</string>
-    <string name="scroll_down">下にスクロール</string>
-    <string name="scroll_left">左にスクロール</string>
-    <string name="scroll_right">右にスクロール</string>
-    <string name="disable_key_code">有効化/無効化キーコード</string>
+    <string name="up_move_key_code">上移動</string>
+    <string name="down_move_key_code">下移動</string>
+    <string name="left_move_key_code">左移動</string>
+    <string name="right_move_key_code">右移動</string>
+    <string name="tap_key_code">タップ/クリック</string>
+    <string name="move_speed">移動速度</string>
+    <string name="scroll_up">上スクロール</string>
+    <string name="scroll_down">下スクロール</string>
+    <string name="scroll_left">左スクロール</string>
+    <string name="scroll_right">右スクロール</string>
+    <string name="disable_key_code">ポインタ表示/非表示</string>
     <string name="set_button">設定</string>
     <string name="license_button">ライセンス</string>
     <string name="credit">© 2024 @nnnnnnn0090</string>
-    <string name="enter_speed_hint">ポインタ移動速度</string>
-    <string name="move_speed_saved">移動速度を保存しました</string>
-    <string name="not_set">未設定: 0</string>
-    <string name="waiting_for_key_input">キーを入力待機中...</string>
-    <string name="key_code_set">設定しました: %1$d</string>
-    <string name="pointer_shown">ポインタを表示しました</string>
-    <string name="pointer_removed">ポインタを非表示にしました</string>
+    <string name="enter_speed_hint">移動速度</string>
+    <string name="move_speed_saved">速度を保存</string>
+    <string name="not_set">無効</string>
+    <string name="waiting_for_key_input">キー入力待ち...</string>
+    <string name="key_code_set">キー設定: %1$d</string>
+    <string name="pointer_shown">ポインタ表示</string>
+    <string name="pointer_removed">ポインタ非表示</string>
+    <string name="move_accel">加速度</string>
+    <string name="enter_accel_hint">加速率</string>
 </resources>
