--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">HardKeyPointer</string>
-    <string name="accessibility_service_description">ハードキーポインタ制御</string>
+    <string name="accessibility_service_description">HardKeyPointer - © 2025 @nnnnnnn0090</string>
 
     <string name="key_settings">キー設定</string>
     <string name="up_move_key_code">上移動</string>
