--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">HardKeyPointer</string>
-    <string name="accessibility_service_description">Hardware key pointer control</string>
+    <string name="accessibility_service_description">HardKeyPointer - © 2025 @nnnnnnn0090</string>
 
     <string name="key_settings">Key Settings</string>
     <string name="up_move_key_code">Move Up</string>
